[package]
name = "snp"
version = "0.1.0"
edition = "2024"

[dependencies]

log = "0.4"
simple_logger = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sha1 = "0.10.6"

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.17"
quinn = "0.11.9"
rustls = { version = "0.23.12", default-features = false }
rustls-pemfile = "1.0.0"

clap = { version = "4.5.17", features = ["derive"] }

rcgen = "0.10.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
